@@ -51,24 +51,76 @@
 
 
 /**
+ * upstart_write_int:
+ * @iovec: iovec to write to,
+ * @size: size of iovec buffer,
+ * @value: value to write.
+ *
+ * Write an integer @value to the end of the @iovec given, which has
+ * @size bytes available in its buffer.
+ *
+ * Integers are transmitted across the wire as signed 32-bit values,
+ * in network byte order.
+ *
+ * On return from this function, the @iovec length will have been
+ * incremented by the number of bytes used by this integer in the stream
+ * if there is insufficient space in the stream for this integer, the
+ * length will be greater than @size.
+ *
+ * Returns: zero on success, negative value on error.
+ **/
+int
+upstart_write_int (struct iovec *iovec,
+		   size_t        size,
+		   int           value)
+{
+	size_t  start;
+	int32_t wire_value;
+
+	nih_assert (iovec != NULL);
+	nih_assert (iovec->iov_base != NULL);
+
+	if ((value < INT32_MIN) || (value > INT32_MAX))
+		return -1;
+
+	start = iovec->iov_len;
+	iovec->iov_len += sizeof (wire_value);
+
+	if (iovec->iov_len > size)
+		return -1;
+
+	wire_value = ntohl (value);
+	memcpy (iovec->iov_base + start, &wire_value, sizeof (wire_value));
+
+	return 0;
+}
+
+/**
  * upstart_read_int:
  * @iovec: iovec to read from,
  * @pos: position within iovec,
  * @value: pointer to write to.
  *
- * Read an integer value from @pos bytes into the @iovec given and store
- * it in the pointer @value.  @pos is incremented by the number of bytes
- * the integer used.
+ * Read an integer value from @pos bytes into the @iovec given, storing
+ * the value found in the integer pointed to by @value.
  *
- * Returns: zero on success, negative value if insufficient space.
+ * Integers are transmitted across the wire as signed 32-bit values,
+ * in network byte order.
+ *
+ * On return from this function, @pos will have been incremented by the
+ * number of bytes used by this integer in the stream; if there is
+ * insufficient space in the stream for this integer, @pos will be
+ * greater than the length of the stream.
+ *
+ * Returns: zero on success, negative value on error.
  **/
 int
 upstart_read_int (struct iovec *iovec,
 		  size_t       *pos,
 		  int          *value)
 {
-	size_t start;
-	int    n_value;
+	size_t  start;
+	int32_t wire_value;
 
 	nih_assert (iovec != NULL);
 	nih_assert (iovec->iov_base != NULL);
@@ -76,51 +128,22 @@ upstart_read_int (struct iovec *iovec,
 	nih_assert (value != NULL);
 
 	start = *pos;
-	*pos += sizeof (int);
+	*pos += sizeof (wire_value);
 
 	if (*pos > iovec->iov_len)
 		return -1;
 
-	memcpy (&n_value, iovec->iov_base + start, sizeof (int));
-	*value = ntohl (n_value);
+	memcpy (&wire_value, iovec->iov_base + start, sizeof (wire_value));
+	wire_value = ntohl (wire_value);
 
-	return 0;
-}
-
-/**
- * upstart_write_int:
- * @iovec: iovec to write to,
- * @size: size of iovec buffer,
- * @value: value to write.
- *
- * Write an integer @value to the end of the @iovec given, which has a
- * buffer of @size bytes.  The length of the @iovec is incremented by
- * the number of bytes the integer used.
- *
- * Returns: zero on success, negative value if insufficient space.
- **/
-int
-upstart_write_int (struct iovec *iovec,
-		   size_t        size,
-		   int           value)
-{
-	size_t start;
-	int    n_value;
-
-	nih_assert (iovec != NULL);
-	nih_assert (iovec->iov_base != NULL);
-
-	start = iovec->iov_len;
-	iovec->iov_len += sizeof (int);
-
-	if (iovec->iov_len > size)
+	if ((wire_value < INT_MIN) || (wire_value > INT_MAX))
 		return -1;
 
-	n_value = htonl (value);
-	memcpy (iovec->iov_base + start, &n_value, sizeof (int));
+	*value = (int)wire_value;
 
 	return 0;
 }
+
 
 /**
  * upstart_read_ints:
